# Markitdown-GUI

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  NOTICE  README.md  install.sh  pyproject.toml  uninstall.sh
.github/workflows/: ci.yml
markitdown_gui/: __init__.py  __main__.py  app.py
packaging/: README.md  build_appimage.sh  build_deb.sh  markitdown-gui.desktop
scripts/: generate_icon.py
tests/: conftest.py  test_conversion.py  test_smoke.py
